Fixed the p overflow

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -148,13 +148,22 @@ i{
 }
 
 #chat-messages{
-	padding:10px 30px 0px 30px; 
+	/*padding:10px 30px 0px 30px; */
 	height: 90%;
-	border:5px solid black;
+	/*border:5px solid black;*/
+	overflow-y: scroll;
 }
 
 #chat-messages ul{
 	list-style-type: none;
+	/*border: 1px solid blue;*/
+	width: 100%;
+	padding:10px 30px 0px 30px; 
+}
+
+#chat-messages ul li {
+	/*border: 1px solid green;*/
+	width: 100%;
 }
 
 #chat-messages ul li img{
@@ -167,9 +176,29 @@ i{
 	border-radius: 5px;
 	margin-top: 5px;
 	margin-left: 50px;
+	margin-right: 5px;
 	padding: 10px;
-	width: 80%;
-	color:white; 
+	word-wrap: break-word;
+	/*width: 90%;*/
+	color: #fff; 
+	height: auto;
 }
+
+#chat-body textarea {
+	margin-right: 10px;
+	border: 1px solid blue;
+	resize: none;
+	width: 100%;
+	height: 10%;
+	/*background-color: #FF4F00;*/
+	/*color: #fff;*/
+	/*border: none;*/
+}
+
+#send {
+	background-color: #fff;
+	height: 8%;
+}
+
 
 
