--- a/css/registration-style.css
+++ b/css/registration-style.css
@@ -47,8 +47,8 @@ form {
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
-	box-shadow: 0 0 8px #FF4F00;
-	border: 1px solid #FF4F00;
+	box-shadow: 0 0 8px #1d89cf;
+	border: 1px solid #1d89cf;
 }
 
 .form-header {
@@ -58,28 +58,28 @@ form {
 	font-family: Verdana;
 	letter-spacing: 2px;
 	color: #fff;
-	background-color: #FF4F00;
+	background-color: #1d89cf;
 	margin-bottom: 20px;
 }
 
 label {
 	display: block;
-	color: #FF4F00;
+	color: #1d89cf;
 	font-family: Arial;
 }
 
 input {
 	width: 90%;
 	height: 40px;
-	border: 1px solid #FF4F00;
+	border: 1px solid #1d89cf;
 	text-align: center;
 	font-family: Arial;
-	color: #FF4F00;
+	color: #1d89cf;
 	margin-bottom: 20px;
 }
 
 input:focus {
-	box-shadow: 0 0 5px #FF4F00;
+	box-shadow: 0 0 5px #1d89cf;
 }
 
 i {
@@ -90,21 +90,21 @@ button {
 	width: 90%;
 	height: 40px;
 	border:none;
-	background-color: #FF4F00;
+	background-color: #1d89cf;
 	color: white;
 	margin-top: 30px;
 	margin-bottom: 20px;
 }
 
 button:hover {
-	background-color: rgba(255, 79, 0, .9);
+	background-color: rgba(29, 137, 207, .9);
 }
 
 a {
 	top: 10px;
-	color: #FF4F00;
+	color: #1d89cf;
 }
 
 a:hover{
-	color: #FF4F00;
+	color: #1d89cf;
 }
